Clean up of build and run commands